Fixed: search page height and overflow

--- a/src/features/Auth/SignForms.css
+++ b/src/features/Auth/SignForms.css
@@ -158,10 +158,6 @@ input {
         margin-top: 10px;
     }
 
-    .back-button h5 {
-        margin: 0px;
-    }
-
     .sign-up-content {
         height: 80%;
         width: 90%;
